# clover-lang

./: .gitignore  README.md  make.sh  meson.build
clc/: core.h  main.c  meson.build
docs/: grammar.yml  syntax_structure.txt
examples/: hello_world.cl
include/: clover.hpp
include/base/: compiler.hpp  compiler_priv.hpp  diagnostic.hpp  optparser.hpp  source.hpp
include/clover/: assert.hpp  compiler.hpp  lexer.hpp  list.h  list.hpp  log.hpp  source.hpp
include/lexer/: lexer.hpp  lexer_checks.hpp  lexer_consts.hpp  lexer_priv.hpp
include/parser/: ast.hpp  parser.hpp  parser_priv.hpp
modules/cloverc/: main.c  meson.build
modules/libcloverc/: meson.build
modules/libcloverc/include/: cl-annotation.h  cl-bits.h  cl-colors.h  cl-compiler.h  cl-core.h  cl-diagnostic.h  cl-lexer-consts.h  cl-log.h  cl-source.h  cl-types.h  cl-vector.h  meson.build
modules/libcloverc/src/: cl-colors.c  cl-compiler.c  cl-diagnostic.c  cl-lexer.c  cl-log.c  cl-source.c  cl-vector.c  meson.build
src/: compiler.cpp  lexer.cpp  list.c  list.cpp  log.cpp  main.cpp  meson.build  parser.cpp  source.cpp
